# recommendation_engine

./: .env  .env.docker  CLAUDE.md  Dockerfile  IMPROVEMENTS.md  Makefile  README.md  STRUCTURE.md  docker-compose.yml  init-db.sql  pyproject.toml
app/: config.py  database.py  main.py  models.py  redis_client.py
scripts/: generate_interactions.py  generate_test_data.py  hti_data_generator.py  hti_seed_data.sql  hti_social_marketplace_generator.py  quick_data_gen.py  realistic_data_generator.py  seed_data.py
